--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -1,4 +1,4 @@
-$screen-md: 1024px;
+$screen-md: 996px;
 $screen-lg: 1280px;
 
 $mina-orange: #ff603b;
